# demo-app-asi

./: .cz.toml  .releaserc.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-GPL-3.0-OR-LATER  README.md
.github/workflows/: audit.yaml  ci.yaml  release.yaml  release_upload.yaml
meta/: LICENSE-HEADER
src/demo-app-asi/: main.rs
src/demo_app/: main.rs
src/demo_app_asi_lib/: lib.rs
src/demo_app_lib/: lib.rs
