[package]
name = "demo-app-asi"
version = "1.0.0-alpha.1"
edition = "2021"
readme = "README.md"
description = ""
rust-version = "1.64.0"
repository = "https://github.com/AliSajid/demo-app-asi"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demo_app_lib"
path = "src/demo_app_asi_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "demo-app"
path = "src/demo-app-asi/main.rs"

[dependencies]


[build]
jobs = 1
incremental = true

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
