[package]
name = "demo-app-asi"
version = "1.2.0"
edition = "2021"
readme = "README.md"
description = "A simple demo project to test automation"
rust-version = "1.64.0"
repository = "https://github.com/AliSajid/demo-app-asi"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/AliSajid/demo-app-asi"
homepage = "https://github.com/AliSajid/demo-app-asi"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demo_app_asi_lib"
path = "src/demo_app_asi_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "demo-app-asi"
path = "src/demo-app-asi/main.rs"

[dependencies]


[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
